src/objects/Escalation__c.object
<CustomObject>
    <description>The primary object used to store data about the escalation</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account for the escalation.</description>
        <inlineHelpText>The account for the escalation.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionPlan__c</fullName>
        <description>Records the action plan to resolve the escalation.</description>
        <inlineHelpText>Records the action plan to resolve the escalation.</inlineHelpText>
        <label>Action Plan</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseCount__c</fullName>
        <description>The number of cases associated with the Escalation</description>
        <inlineHelpText>The number of cases associated with the Escalation</inlineHelpText>
        <label>Case Count</label>
        <summaryForeignKey>EscalationCase__c.Escalation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CommentCount__c</fullName>
        <description>The number of comments</description>
        <formula>PrivateCommentCount__c +  PublicCommentCount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of comments</inlineHelpText>
        <label>Comment Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the issue</description>
        <inlineHelpText>The description of the issue</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LastCommentDate__c</fullName>
        <description>When the last comment was made</description>
        <formula>IF(LastPrivateCommentDate__c &gt; LastPublicCommentDate__c, LastPrivateCommentDate__c, LastPublicCommentDate__c)</formula>
        <inlineHelpText>When the last comment was made</inlineHelpText>
        <label>Last Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastPrivateCommentDate__c</fullName>
        <description>When the last private comment was made</description>
        <inlineHelpText>When the last private comment was made</inlineHelpText>
        <label>Last Private Comment Date</label>
        <summarizedField>EscalationComment__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>EscalationComment__c.Private__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>EscalationComment__c.Escalation__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LastPublicCommentDate__c</fullName>
        <description>When the last public comment was made</description>
        <inlineHelpText>When the last public comment was made</inlineHelpText>
        <label>Last Public Comment Date</label>
        <summarizedField>EscalationComment__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>EscalationComment__c.Private__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>EscalationComment__c.Escalation__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LastUpdateDate__c</fullName>
        <description>When the last update was made</description>
        <formula>IF( LastModifiedDate &gt; LastCommentDate__c, LastModifiedDate, LastCommentDate__c)</formula>
        <inlineHelpText>When the last update was made</inlineHelpText>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PreventativeActionPlan__c</fullName>
        <description>Records the plan for how to prevent this type of escalation being raised again in the future.  Contains the closed-loop plan.</description>
        <inlineHelpText>Records the plan for how to prevent this type of escalation being raised again in the future.  Contains the closed-loop plan.</inlineHelpText>
        <label>Preventative Action Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary case for the escalation</description>
        <inlineHelpText>The primary case for the escalation</inlineHelpText>
        <label>Primary Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrivateCommentCount__c</fullName>
        <description>The number of private comments</description>
        <inlineHelpText>The number of private comments</inlineHelpText>
        <label>Private Comment Count</label>
        <summaryFilterItems>
            <field>EscalationComment__c.Private__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>EscalationComment__c.Escalation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PublicCommentCount__c</fullName>
        <description>The number of public comments</description>
        <inlineHelpText>The number of public comments</inlineHelpText>
        <label>Public Comment Count</label>
        <summaryFilterItems>
            <field>EscalationComment__c.Private__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>EscalationComment__c.Escalation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>The subject of the issue</description>
        <inlineHelpText>The subject of the issue</inlineHelpText>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>The escalation tier</description>
        <inlineHelpText>The escalation tier</inlineHelpText>
        <label>Tier [Deprecated]</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Escalation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EN-{00000}</displayFormat>
        <label>Escalation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>